--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "start": "node quokke.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["javascript"],
+  "keywords": [
+    "javascript"
+  ],
   "author": "me",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "winston": "^3.8.1"
+  }
 }
