--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "quokke.js",
+  "type": "module",
   "scripts": {
-    "start": "node quokke.js",
+    "dev": "node quokke.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,6 +14,8 @@
   "author": "me",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "chalk": "^5.0.1",
     "winston": "^3.8.1"
   }
 }
