--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "quokke.js",
   "type": "module",
   "scripts": {
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix .",
     "dev": "node quokke.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,5 +19,12 @@
     "axios": "^0.27.2",
     "chalk": "^5.0.1",
     "winston": "^3.8.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.21.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0"
   }
 }
